--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.alert {
+    left: 0;
+    margin: auto;
+    position: absolute; 
+    right: 0;
+    text-align: center; 
+    top: 1em;
+    width: 80%;
+    z-index: 1; 
+  }
+  
