--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -18,7 +18,7 @@
         <td>{{u.name+" "+u.lname}}</td>
         <td> {{u.age}}</td>
           <td> {{u.gender}} </td>
-              <td> {{u.dob | date:'shortDate'}} </td>
+              <td> {{u.dob | date:'medium'}} </td>
                   <td>{{u.address}}</td>
                       <td>{{u.state}}</td>
                           <td>{{u.country | uppercase | country}}</td>
